# MIST

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Metrics.ipynb  Models.ipynb  Models3D.ipynb  README.md  SECURITY.md  example.ipynb  ivygap-3d-pipeline.ipynb  loss.py  losses.py  mist-torch.yml  mkdocs.yml  models.py  predict.py  preprocess.py  pyproject.toml  pytest.ini  requirements.txt  run_pocketnet_experiments_brats.py  run_pocketnet_experiments_heart.py  run_pocketnet_experiments_lits.py  run_pocketnet_experiments_lung.py  run_pocketnet_experiments_nfbs.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docker-publish.yml  headers.yml  lint.yml  python-publish.yml  test.yml
.ipynb_checkpoints/: Metrics-checkpoint.ipynb
analyze_data/: analyze.py
archive/: README.md  msd_heart_example.ipynb
archive/mist/: example.ipynb  inference.py  loss.py  pocketnet_run_brats-Copy1.ipynb  pocketnet_run_brats.ipynb  pocketnet_run_brats_feature_importance.ipynb  pocketnet_run_heart.ipynb  pocketnet_run_lits-Copy1.ipynb  pocketnet_run_lits.ipynb  pocketnet_run_lits_ablation.ipynb  pocketnet_run_nfbs.ipynb  postprocess.py  preprocess.py  runtime.py  test.ipynb  utils.py  wilcoxon.ipynb
conversion_tools/: csv.py
data_loading/: dali_loader.py
dockerfiles/: mist.dockerfile  mist_analyze.dockerfile  mist_evaluate.dockerfile  mist_predict.dockerfile  mist_preprocess.dockerfile  mist_run_all.dockerfile  mist_train.dockerfile
docs/: advanced_topics.md  api.md  getting_started.md  index.md  requirements.txt  usage.md
examples/: brats_mr_example.ipynb  lits_ct_example.ipynb  msd_heart_example.ipynb
examples/dataset-json/: brats.json
inference/: main_inference.py  sliding_window.py
metrics/: metrics.py
mist/: convert_to_mist.py  eval_preds.py  example.ipynb  inference.py  loss.py  main.py  metrics.py  model-old.py  model.py  models.py  norm_surf_loss_brats.ipynb  post_preds.py  postprocess.py  predict.py  preprocess.py  runtime.py  utils.py
mist-tf/: .dockerignore  Dockerfile  README.md  eval_preds.py  main.py  predict.py
mist-tf/analyze_data/: analyze.py
mist-tf/conversion_tools/: csv.py  msd.py
mist-tf/data_loading/: dali_loader.py
mist-tf/examples/: brats.json
mist-tf/inference/: main_inference.py  sliding_window.py
mist-tf/metrics/: metrics.py
mist-tf/models/: densenet.py  hrnet.py  layers.py  normalizations.py  resnet.py  unet.py
mist-tf/postprocess_preds/: postprocess.py
mist-tf/preprocess_data/: preprocess.py
mist-tf/runtime/: args.py  checkpoints.py  evaluate.py  logger.py  loss.py  progress_bar.py  run.py  utils.py
mist-torch/: Dockerfile  README.md  eval_preds.py  main.py  mist-torch.yml  predict.py
mist-torch/analyze_data/: analyze.py
mist-torch/examples/: lits.json  nfbs.json
mist-torch/inference/: main_inference.py
mist-torch/metrics/: metrics.py
mist-torch/models/: densenet.py  get_model.py  layers.py  nnunet.py  resnet.py  unet.py
mist-torch/postprocess_preds/: postprocess.py
mist-torch/preprocess_data/: preprocess.py
mist-torch/runtime/: args.py  evaluate.py  loss.py  run.py  utils.py
mist/analyze_data/: analyze.py  analyzer.py  analyzer_constants.py  analyzer_utils.py  base_config.json  data_dump_utils.py  data_dumper.py
mist/cli/: analyze_entrypoint.py  args.py  average_weights_entrypoint.py  conversion_entrypoint.py  convert_csv_entrypoint.py  convert_msd_entrypoint.py  ensemble_entrypoint.py  evaluation_entrypoint.py  inference_entrypoint.py  postprocess_entrypoint.py  preprocess_entrypoint.py  rank_entrypoint.py  run_all_entrypoint.py  train_entrypoint.py
mist/conversion_tools/: conversion_format_registry.py  conversion_utils.py  csv.py  msd.py
mist/data_loading/: dali_loader.py  data_loading_constants.py  data_loading_utils.py  utils.py
mist/evaluate_preds/: evaluate.py  evaluation_utils.py
mist/evaluation/: evaluation_utils.py  evaluator.py  ranking.py
mist/inference/: __init__.py  inference_constants.py  inference_runners.py  inference_utils.py  main_inference.py  predictor.py
mist/loss_functions/: __init__.py  alpha_schedulers.py  base.py  deep_supervision_wrapper.py  loss_constants.py  loss_registry.py  loss_utils.py
mist/losses/: loss.py  losses.py
mist/metrics/: lesion_wise_metrics.py  lookup_tables.py  metrics.py  metrics_constants.py  metrics_registry.py  segmentation_metrics.py
mist/misc/: evaluate_brats.py
mist/models/: __init__.py  base_model.py  get_model.py  layers.py  mgnets.py  model_loader.py  model_registry.py  models.py  nnunet.py  unet.py
mist/postprocess_preds/: postprocess.py  postprocessing_utils.py  postprocessor.py  transform_registry.py
mist/postprocessing/: postprocessing_constants.py  postprocessing_utils.py  postprocessor.py  transform_registry.py
mist/preprocess/: preprocess.py  preprocess_ct.py
mist/preprocess_data/: preprocess.py  preprocessing_constants.py
mist/preprocessing/: preprocess.py  preprocessing_constants.py  preprocessing_utils.py
mist/runtime/: args.py  exceptions.py  loss.py  loss_functions.py  loss_utils.py  progress_bar.py  run.py  runtime_constants.py  utils.py
mist/scripts/: analyze_entrypoint.py  conversion_entrypoint.py  evaluation_entrypoint.py  inference_entrypoint.py  postprocess_entrypoint.py  preprocess_entrypoint.py  run_all_entrypoint.py  train_entrypoint.py
mist/training/: training_utils.py
mist/utils/: console.py  io.py  progress_bar.py
mistrg/: convert_to_mist.py  eval_preds.py  main.py  post_preds.py  predict.py
mistrg/analyze_data/: analyze.py
mistrg/conversion_tools/: csv.py
mistrg/data_loading/: dali_loader.py
models/: densenet.py  get_model.py  layers.py  nnunet.py  resnet.py  unet.py
postprocess_preds/: postprocess.py
preprocess_data/: preprocess.py
runtime/: args.py  checkpoints.py  loss.py  progress_bar.py  run.py  utils.py
src/: convert_to_mist.py  main.py  predict.py
tests/: conftest.py  test_convert_to_mist.py  test_eval_preds.py
(+280 files in other folders)
