[project]
name = "mist-medical"
version = "2.0.0-rc"
requires-python = ">= 3.10"
description = "MIST is a simple and scalable end-to-end framework for medical imaging segmentation."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Adrian Celaya", email = "aecelaya@rice.edu"},
    {name = "David Fuentes", email = "dtfuentes@mdanderson.org"},
    {name= "Tucker Netherton", email = "tnetherton@mdanderson.org"},
    {name = "Beatrice Riviere", email = "riviere@rice.edu"},
    {name = "Rice University"},
    {name = "The University of Texas MD Anderson Cancer Center"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
keywords = [
    "deep learning",
    "image segmentation",
    "semantic segmentation",
    "medical image analysis",
    "medical image segmentation",
    "nnUNet",
    "U-Net",
    "vision transformers",
    "Swin UNETR"
]
dependencies = [
    "torch",
    "monai",
    "antspyx",
    "simpleitk",
    "numpy",
    "pandas",
    "rich",
    "scipy",
    "scikit-learn",
    "scikit-image",
    "tensorboard",
    "einops",
    "pytest",
]

[project.optional-dependencies]
train = ["nvidia-dali-cuda120"]

[project.urls]
homepage = "https://github.com/mist-medical/MIST"
repository = "https://github.com/mist-medical/MIST"
documentation = "https://mist-medical.readthedocs.io/"

[project.scripts]
mist_run_all = "mist.cli.run_all_entrypoint:run_all_entry"
mist_analyze = "mist.cli.analyze_entrypoint:analyze_entry"
mist_preprocess = "mist.cli.preprocess_entrypoint:preprocess_entry"
mist_train = "mist.cli.train_entrypoint:train_entry"
mist_predict = "mist.cli.inference_entrypoint:inference_entry"
mist_evaluate = "mist.cli.evaluation_entrypoint:evaluation_entry"
mist_postprocess = "mist.cli.postprocess_entrypoint:postprocess_entry"
mist_rank = "mist.cli.rank_entrypoint:rank_entry"
mist_convert_msd = "mist.cli.convert_msd_entrypoint:convert_msd_entry"
mist_convert_csv = "mist.cli.convert_csv_entrypoint:convert_csv_entry"
mist_average_weights = "mist.cli.average_weights_entrypoint:average_weights_entry"

[tool.codespell]
skip = ".git"
